src/test/deca/syntax/parser/valid/test/pars_val_printlnx.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction printlnx.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2023


{
    printlnx("Hello");
}