src/test/deca/syntax/parser/invalid/test/test_pars_inv_intruction_or_expr_multiple_oubli_une_barre.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les or_expr
//
// Resultats:
//    Ligne 11 : Erreur ( oubli un "|")
//    
//
// Historique:
//    cree le 04/01/2023
{
    expression_bidon | expression_bidon1;
}
